--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@ Thumbs.db
 
 #python bytecode cache, for some plugins.
 *.pyc
+Practice-CSharp/Assets/_GitIgnore/
+Practice-CSharp/Assets/_GitIgnore.meta
